Closed Bug 355878 Opened 19 years ago Closed 19 years ago

new[] / delete mismatch in nsAutoCompleteMdbResult.cpp

Categories

(Toolkit :: Autocomplete, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: kherron+mozilla, Assigned: weiju)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity, Whiteboard: [good first bug])

Attachments

(1 file)

This is coverity ID 1051. Please see the sample URL. swapval is allocated with new[] but deleted with delete instead of delete[].
Whiteboard: [good first bug]
I guess this one is pretty trivial, but I thought this is hopefully easy enough to give myself a try on the patch release process
Attachment #241899 - Flags: review?
Attachment #241899 - Flags: review? → review?(ben)
Attachment #241899 - Flags: review?(ben) → review?(gavin.sharp)
Attachment #241899 - Flags: review?(gavin.sharp) → review+
Assignee: nobody → weiju
OS: Linux → All
QA Contact: history → autocomplete
Hardware: PC → All
Whiteboard: [good first bug] → [good first bug][checkin needed]
Version: unspecified → Trunk
Component: History → Autocomplete
Flags: review+
Product: Firefox → Toolkit
Checked in on the trunk. Thanks for the patch! mozilla/toolkit/components/autocomplete/src/nsAutoCompleteMdbResult.cpp 1.15
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [good first bug][checkin needed] → [good first bug]
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: