Bug 355878: fix new[] / delete mismatch in nsAutoCompleteMdbResult.cpp, patch by Wei-ju Wu <weiju@web.de>, r=me