toolkit/components/autocomplete/src/nsAutoCompleteMdbResult.cpp
@@ -290,7 +290,7 @@ nsAutoCompleteMdbResult::GetRowValue(nsIMdbRow *aRow, mdb_column aCol, nsAString
           return NS_ERROR_OUT_OF_MEMORY;
         SwapBytes(swapval, (const PRUnichar *)yarn.mYarn_Buf, len);
         aValue.Assign(swapval, len);
-        delete swapval;
+        delete[] swapval;
       }
       else
         aValue.Assign((const PRUnichar *)yarn.mYarn_Buf, len);
